--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
   <header id="main-header" class="bg-success text-white p-4 mb-3">
     <div class="container">
+      <!-- <samp>1</samp> -->
       <h1 id="header-title">Item Lister <span style="display:none">123</span></h1>
     </div>
   </header>
